--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./demo.css" rel="stylesheet" type="text/css">
   <link href="./notification.css" rel="stylesheet" type="text/css">
-  <title>Document</title>
+  <title>Notifications</title>
 </head>
 
 <body>
-  <form>
+  <form autocomplete="off">
     <h1>Notifications</h1>
     <div class="group">
-      <input type="text" id="title" placeholder="Enter a title" value="Success">
+      <input type="text" id="title" placeholder="Enter a title" value="Title">
       <span class="bar"></span>
       <label>Title</label>
     </div>
@@ -30,29 +30,30 @@
     </div>
     <div class="group">
       <select id="position">
-        <option value="position-top-right">Top Right</option>
-        <option value="position-bottom-right">Bottom Right</option>
-        <!--<option value="nfc-top-left">Top Left</option>
-        <option value="nfc-bottom-left">Bottom Left</option>-->
+        <option value="bottom-right">Bottom Right</option>
+        <option value="top-right">Top Right</option>
+        <option value="bottom-left">Bottom Left</option>
+        <option value="top-left">Top Left</option>
+        <option value="center">Center</option>
       </select>
       <span class="bar"></span>
       <label>Position</label>
     </div>
     <div class="group">
       <select id="type">
-        <option value="notification-success">Success</option>
-        <option value="notification-info">Information</option>
-        <option value="notification-warning">Warning</option>
-        <option value="notification-error">Error</option>
+        <option value="info">Information</option>
+        <option value="success">Success</option>
+        <option value="warning">Warning</option>
+        <option value="error">Error</option>
+        <option value="dialog">Dialog</option>
       </select>
       <span class="bar"></span>
-      <label>Theme</label>
+      <label>Type</label>
     </div>
     <div class="btn-box">
       <button class="btn btn-submit" type="submit">Show notification</button>
     </div>
   </form>
-
   <script src="./notification.js" type="text/javascript"></script>
   <script>
     window.addEventListener('DOMContentLoaded', function() {
@@ -68,18 +69,31 @@
         let position = form.querySelector('#position').value;
         let duration = form.querySelector('#duration').value;
         let type = form.querySelector('#type').value;
+        let callback = null;
 
-        if (!message) {
-          message = 'You did not enter a message...';
+        if (type == 'dialog') {
+          callback = (result) => {
+            console.log('result = ', result)
+          };
         }
 
-        notification = Notification({
+        const popup = Notification({
           position: position,
-          duration: duration,
-          type: type
-        })({
+          duration: duration
+        });
+
+        if (!popup[type]) {
+          popup.error({
+            title: 'Error',
+            message: `Notification has no such method "${type}"`
+          });
+          return;
+        }
+
+        popup[type]({
           title: title,
-          message: message
+          message: message,
+          callback: callback
         });
       });
     });
