fix default title value for demo page

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <form autocomplete="off">
       <h1>Notifications</h1>
       <div class="group">
-        <input type="text" id="title" placeholder="Enter a title" value="Info">
+        <input type="text" id="title" placeholder="Enter a title" value="Error">
         <span class="bar"></span>
         <label>Title</label>
       </div>
       <div class="group">
-        <input type="text" id="message" placeholder="Enter a message" value="Default Info Message">
+        <input type="text" id="message" placeholder="Enter a message" value="An error has occurred">
         <span class="bar"></span>
         <label>Message</label>
       </div>
